# softlayer_saltmaster_bootstrap

./: .gitignore  Makefile  README.md
python/: AUTHORS  ChangeLog  README  requirements.txt  setup.cfg  setup.py
python/softlayer_saltmaster_bootstrap/: __main__.py
salt_seed_fs/etc/systemd/system/: saltmaster.service
tools/: py-in-venv
