[metadata]
name = softlayer_saltmaster_bootstrap
author = michael dye
author-email = mdye@us.ibm.com
summary = API for SoftLayer quota management project
description-file = README
license = Eclipse
requires-python = 2.7
classifier =
    Development Status :: 4 - Beta
        Operating System :: Linux
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    softlayer_saltmaster_bootstrap
[pbr]
warnerrors = True
[wheel]
universal = 1
